fixed home page layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ h1 a {
   position: fixed;
   top: 15px;
   left: 15px;
-  margin: -5px; 
+  margin: 1px; 
 }
 
 h2 {
@@ -106,7 +106,9 @@ h5 {
 }
 
 h6 {
-
+ font-size: 16px;
+ font-family: "Montserrat", sans-serif;
+ margin-top: -175px; 
 }
 
 /*form font */
@@ -182,7 +184,7 @@ p {
   position: fixed;
   padding: 0;
   padding-top: 25px;
-  background: #FBFBF4;
+  background: white;
   border-bottom: 1px solid black;
 }
 
@@ -200,7 +202,7 @@ nav {
   float: right;
   display: inline-block;
   text-align: center;
-  margin: -28px;
+  margin: -20px;
 }
 .nav-links-item {
   display: inline-block;
